# data-scientist-take-home

./: .gitignore  README.md  pyproject.toml
src/: analyze_txs.py  fetch_txs.py  setup_db.py
