[tool.poetry]
name = "data-scientist-take-home"
version = "0.1.0"
description = ""
authors = ["Jayant Krishnamurthy <jayantkrishnamurthy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
